[package]
name = "hornet"
version = "0.1.0"
description = "A load testing tool"
repository = "https://github.com/hornet-test/hornet"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
openapiv3 = "1.0.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.19.2", features = ["full"] }
futures = "0.3.21"
async-stream = "0.3.3"

[dev-dependencies]
httptest = "0.15.4"
